--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    text-decoration: none;
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    --color-black: #040F0F;
+    --color-greendark: #248232;
+    --color-green: #2BA84A;
+    --color-grey: #2D3A3A;
+    --color-white: #FCFFFC;
+
+}
